update style file

--- a/static/style.css
+++ b/static/style.css
@@ -1,6 +1,6 @@
 /* style.css */
 
-.doto-<uniquifier> {
+.doto-custom {
   font-family: "Doto", sans-serif;
   font-optical-sizing: auto;
   font-weight: 800;
